modified:   13. Strings and Text Processing/Manipulating Strings.ipynb

--- a/13. Strings and Text Processing/Manipulating Strings.ipynb
+++ b/13. Strings and Text Processing/Manipulating Strings.ipynb
@@ -484,7 +484,7 @@
     "These methods both search the contents of the text sequence, but in opposite directions, for the index corresponding to the first occurrence of the specified subtring. \n",
     "\n",
     "If it finds the substring, it **returns the index where it was found**.  \n",
-    "Otherwise, it will return $-1$ to indicate that the substring was not found:   "
+    "Otherwise, it will **return** $-1$ to indicate that the **substring was not found**:   "
    ]
   },
   {
