modified:   13. Strings and Text Processing/Manipulating Strings.ipynb

--- a/13. Strings and Text Processing/Manipulating Strings.ipynb
+++ b/13. Strings and Text Processing/Manipulating Strings.ipynb
@@ -668,7 +668,7 @@
     }
    ],
    "source": [
-    "// searching forwards from the beginning of the string\n",
+    "// searching backwards from the end of the string\n",
     "// for the substring \"_\"\n",
     "\"__Where's that____underscore at?_\".LastIndexOf(\"_\")"
    ]
@@ -730,7 +730,7 @@
     }
    ],
    "source": [
-    "// searching forwards from the beginning of the string\n",
+    "// searching backwards from the end of the string\n",
     "// for the substring \"Not Found\"\n",
     "\"__Where's that____underscore at?_\".LastIndexOf(\"Not Found\")"
    ]
