modified:   13. Strings and Text Processing/Manipulating Strings.ipynb

--- a/13. Strings and Text Processing/Manipulating Strings.ipynb
+++ b/13. Strings and Text Processing/Manipulating Strings.ipynb
@@ -973,6 +973,270 @@
     "\n",
     "}"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Extracting a Portion of a String"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We know how to *check whether a substring occurs in a text* and which are the occurrence positions. But how can we **extract the substring itself?**  \n",
+    "\n",
+    "The solution of this problem is the `Substring(…)` method.    \n",
+    "    \n",
+    "By using it, we can **extract a part of the string** (**substring**) by a given *starting position in the text* and its *length*.   \n",
+    "    \n",
+    "If the *length* is omitted, the it will be from the beginning to the end."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Let's say we wanted to **extract the file name** for a cool pic from the following file path:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "string filePath = \"C:\\\\Pics\\\\CoolPic.jpg\";"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Since the `filePath` is also like an **array of characters**, we mmay visualize it as follows:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<table style=\"background: white; color: black;\">\n",
+    "    <thead>\n",
+    "        <th style=\"border: 1px solid black;\">0</th>\n",
+    "        <th style=\"border: 1px solid black;\">1</th>\n",
+    "        <th style=\"border: 1px solid black;\">2</th>\n",
+    "        <th style=\"border: 1px solid black;\">3</th>\n",
+    "        <th style=\"border: 1px solid black;\">4</th>\n",
+    "        <th style=\"border: 1px solid black;\">5</th>\n",
+    "        <th style=\"border: 1px solid black;\">6</th>\n",
+    "        <th style=\"border: 1px solid black;\">7</th>\n",
+    "        <th style=\"border: 1px solid black; font-style: italic;\">8</th>\n",
+    "        <th style=\"border: 1px solid black; font-style: italic;\">9</th>\n",
+    "        <th style=\"border: 1px solid black; font-style: italic;\">10</th>\n",
+    "        <th style=\"border: 1px solid black; font-style: italic;\">11</th>\n",
+    "        <th style=\"border: 1px solid black; font-style: italic;\">12</th>\n",
+    "        <th style=\"border: 1px solid black; font-style: italic;\">13</th>\n",
+    "        <th style=\"border: 1px solid black; font-style: italic;\">14</th>\n",
+    "        <th style=\"border: 1px solid black;\">15</th>\n",
+    "        <th style=\"border: 1px solid black;\">16</th>\n",
+    "        <th style=\"border: 1px solid black;\">17</th>\n",
+    "        <th style=\"border: 1px solid black;\">18</th>\n",
+    "    </thead>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td style=\"border: 1px solid black;\">C</td>\n",
+    "            <td style=\"border: 1px solid black;\">:</td>\n",
+    "            <td style=\"border: 1px solid black;\">\\</td>\n",
+    "            <td style=\"border: 1px solid black;\">P</td>\n",
+    "            <td style=\"border: 1px solid black;\">i</td>\n",
+    "            <td style=\"border: 1px solid black;\">c</td>\n",
+    "            <td style=\"border: 1px solid black;\">s</td>\n",
+    "            <td style=\"border: 1px solid black;\">\\</td>\n",
+    "            <td style=\"border: 1px solid black; font-weight: bold;\">C</td>\n",
+    "            <td style=\"border: 1px solid black; font-weight: bold;\">o</td>\n",
+    "            <td style=\"border: 1px solid black; font-weight: bold;\">o</td>\n",
+    "            <td style=\"border: 1px solid black; font-weight: bold;\">l</td>\n",
+    "            <td style=\"border: 1px solid black; font-weight: bold;\">P</td>\n",
+    "            <td style=\"border: 1px solid black; font-weight: bold;\">i</td>\n",
+    "            <td style=\"border: 1px solid black; font-weight: bold;\">c</td>\n",
+    "            <td style=\"border: 1px solid black;\">.</td>\n",
+    "            <td style=\"border: 1px solid black;\">j</td>\n",
+    "            <td style=\"border: 1px solid black;\">p</td>\n",
+    "            <td style=\"border: 1px solid black;\">g</td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
+    "</table>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "As such, to **extract the file name** from the `filePath`, we should **start at index** $8$, and then **extract the next** $7$ **characters**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CoolPic"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "filePath.Substring( 8, 7 )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
   }
  ],
  "metadata": {
