modified:   13. Strings and Text Processing/Manipulating Strings.ipynb

--- a/13. Strings and Text Processing/Manipulating Strings.ipynb
+++ b/13. Strings and Text Processing/Manipulating Strings.ipynb
@@ -1191,7 +1191,7 @@
     }
    },
    "source": [
-    "As such, to **extract the file name** from the `filePath`, we should **start at index** $8$, and then **extract the next** $7$ **characters**"
+    "As such, to **extract the file name** from the `filePath`, we should **start at index** $8$, and then **extract the next** $7$ **characters**:"
    ]
   },
   {
