modified:   13. Strings and Text Processing/Manipulating Strings.ipynb

--- a/13. Strings and Text Processing/Manipulating Strings.ipynb
+++ b/13. Strings and Text Processing/Manipulating Strings.ipynb
@@ -1005,7 +1005,8 @@
     }
    },
    "source": [
-    "We know how to *check whether a substring occurs in a text* and which are the occurrence positions. But how can we **extract the substring itself?**  \n",
+    "We know how to *check whether a substring occurs in a text* and which are the occurrence positions.       \n",
+    "But how can we **extract the substring itself?**  \n",
     "\n",
     "The solution of this problem is the `Substring(…)` method.    \n",
     "    \n",
