modified:   13. Strings and Text Processing/Manipulating Strings.ipynb

--- a/13. Strings and Text Processing/Manipulating Strings.ipynb
+++ b/13. Strings and Text Processing/Manipulating Strings.ipynb
@@ -1091,7 +1091,7 @@
     }
    },
    "source": [
-    "Since the `filePath` is also like an **array of characters**, we mmay visualize it as follows:"
+    "Since the `filePath` is also like an **array of characters**, we may visualize it as follows:"
    ]
   },
   {
